<resources>
    <string name="app_name">Jobs Pro</string>
    <string name="default_notification_channel_id">default_notification_channel_id</string>
    <string name="ok">OK</string>
    <string name="permission_title_alert">Alert Permission</string>
    <string name="permission_content_alert">You should to get the permissions you need for the app to use it.</string>
    <string name="get_started">GET STARTED</string>
    <string name="already_have_account">Already have an account? LOG IN  </string>
    <string name="username">USERNAME</string>
    <string name="password">Password</string>
    <string name="email_or_phone">Email or Phone</string>
    <string name="low_password">Password</string>
    <string name="facebook">Facebook</string>
    <string name="google">Google</string>
    <string name="login">LOGIN</string>
    <string name="create_accont">CREATE ACCOUNT</string>
    <string name="signup">SIGN UP</string>
    <string name="login_">Log In</string>
    <string name="signup_">Sign Up</string>
    <string name="skip">Skip</string>
    <string name="slide_title1">Sign-up on Jobs Pro and start receiving Job requests</string>
    <string name="slide_title2">Provide your proposals to your customers</string>
    <string name="slide_title3">Complete your scheduled jobs, and get paid!</string>
    <string name="tools_and_box">Tools and Box</string>
    <string name="home">Home</string>
    <string name="contractors">Contractors</string>
    <string name="marketplace">Marketplace</string>
    <string name="projects">Jobs</string>
    <string name="pending_jobs">Pending Jobs</string>
    <string name="info">Info</string>
    <string name="news">News</string>
    <string name="messages">Messages </string>
    <string name="profile">Profile</string>
    <string name="business_info">Business Info</string>
    <string name="account_settings">Account Settings</string>
    <string name="post_job">Post a Job</string>
    <string name="edit_a_job">Edit a Job</string>
    <string name="explore_market_place">Explore Marketplace &amp; Jobs</string>
    <string name="edit_name">Edit name</string>
    <string name="user_name">Username</string>
    <string name="name">Name</string>
    <string name="company_info">Company Information</string>
    <string name="name_of_business">Name of Business</string>
    <string name="name_business_individual">Name of Business / Individual</string>
    <string name="type_of_business">Type Of Business</string>
    <string name="industry">Industry</string>
    <string name="address">Address</string>
    <string name="business_identification">Business Identification</string>
    <string name="email">Email</string>
    <string name="email_address">Email Address</string>
    <string name="payment">Payment</string>
    <string name="phone">Phone</string>
    <string name="phone_number">Phone Number</string>
    <string name="repeat_password">Repeat Password</string>
    <string name="rating">Rating</string>
    <string name="region">Region</string>
    <string name="project_done_on_time">Jobs done on time</string>
    <string name="search">Search</string>
    <string name="about_toolsbox">About Tools and Box</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="terms_of_use">Terms of Use</string>
    <string name="contractor_name">Contractor Name</string>
    <string name="title_of_contractor">Title of Contractor</string>
    <string name="specialization">Specialization</string>
    <string name="number_of_project">Number of Job</string>
    <string name="overall_rating">Overall Rating</string>
    <string name="time_commitment">Time Commitment</string>
    <string name="time_availability">Time availability</string>
    <string name="reviews">Reviews</string>
    <string name="project_history">Job History</string>
    <string name="what_type_of_project">What type of Job</string>
    <string name="budget">Budget</string>
    <string name="description">Description</string>
    <string name="submit">SUBMIT</string>
    <string name="status">Status</string>
    <string name="contractor">Contractor</string>
    <string name="customer">Customer</string>
    <string name="customer_name">Customer Name</string>
    <string name="specialist_total_hour">Specialist Total Hours</string>
    <string name="hourly_rate">Hourly Rate</string>
    <string name="contractor_title">Contractor Title</string>
    <string name="contractor_specialization">Contractor Specialization</string>
    <string name="start_date">Start Date</string>
    <string name="start_date_time">Start Date &amp; Time</string>
    <string name="duration">Duration</string>
    <string name="project_description">Job Description</string>
    <string name="cost">Cost</string>
    <string name="more">More</string>
    <string name="expand">expand</string>
    <string name="search_job_description">Search for jobs in any industry in your area</string>
    <string name="search_specialist_description">Search for specialists in any industry in your area</string>
    <string name="area_of_specialization">Area of Specialization</string>
    <string name="search_result">Search Results</string>
    <string name="hire">Hire</string>
    <string name="chat">Chat</string>
    <string name="filter">Filter</string>
    <string name="post_project_description">Search your Job history, post new Job and filter jobs</string>
    <string name="make_payment">Make Payment</string>
    <string name="edit">Edit</string>
    <string name="open">Open</string>
    <string name="project_name">Job Name</string>
    <string name="project_type">Job Type</string>
    <string name="skills_required">Skills Required</string>
    <string name="estimated_budget">Estimated Budget</string>
    <string name="contact_info">Contact Info</string>
    <string name="payment_info">Payment Info</string>
    <string name="about">About</string>
    <string name="accept">Accept</string>
    <string name="decline">Decline</string>
    <string name="filter_result">Filter Result</string>
    <string name="jobs">Jobs</string>
    <string name="jobs_pro">Jobs Pro</string>
    <string name="please_fill_in_your_business">Please fill in your business information.</string>
    <string name="i_have_read_the">I have read the Terms &amp; Conditions</string>
    <string name="connecting_you_with">Connecting you with your speciality service</string>
    <string name="copyright_jobs">Copyright \u00a9 2020 Jobs Technologies lnc.</string>
    <string name="or_sign_in_with">Or Sign in with</string>
    <string name="i_agree_to_the_terms">I agree to the <b>Terms of Service</b> and <b>Privacy Policy</b></string>
    <string name="specialists">Specialists</string>
    <string name="area">Area</string>
    <string name="search_radius">Search Radius:</string>
    <string name="newly_posted">Newly Posted</string>
    <string name="pending">Pending</string>
    <string name="scheduled">Scheduled</string>
    <string name="specialist_support">Specialist Support</string>
    <string name="call_specialist_support">Call Specialist Support</string>
    <string name="email_specialist_support">Email Specialist Support</string>
    <string name="scheduled_date">Scheduled Date</string>
    <string name="pending_approval">Pending Approval</string>
    <string name="complete">Complete</string>
    <string name="value">Value</string>
    <string name="job_type">Job Type</string>
    <string name="job_value">Job Value</string>
    <string name="posted_date">Posted Date</string>
    <string name="logout">Logout</string>
    <string name="save">Save</string>
    <string name="add_photo">Add Photo</string>
    <string name="what_are_you_looking">What are you looking to do today?</string>
    <string name="availability">Availability</string>
    <string name="customer_availability">Customer availability</string>
    <string name="quote_value_description">You can either submit a fixed quote or an hourly rate for your jobs.</string>
    <string name="view_availability">View Availability</string>
    <string name="urgency">Urgency</string>
    <string name="job_post_description">Description: Please include details of your job. This will help your specialist to determine the best &amp; most accurate quotation for the job</string>
    <string name="specialist">Specialist</string>
    <string name="name_of_completed_job">Number of Completed Jobs</string>
    <string name="see_reviews">See Reviews</string>
    <string name="add_review">Add Review</string>
    <string name="work_quality">Work Quality</string>
    <string name="please_add_comment">Please add comment</string>
    <string name="post_date">Post Date</string>
    <string name="duration_days">Duration (days)</string>
    <string name="job_description">Job Description</string>
    <string name="view_proposal">View Proposal</string>
    <string name="payments">Payments</string>
    <string name="edit_job">Edit Job</string>
    <string name="complete_job">Complete Job</string>
    <string name="remove_posting">Remove Posting</string>
    <string name="dispute_job">Dispute Job</string>
    <string name="location">Location</string>
    <string name="job_details">Job Details</string>
    <string name="quotation_value">Quotation Value</string>
    <string name="available_starting_dates">Available Starting Dates</string>
    <string name="estimated_completion_time">Estimated Completion Time (days)</string>
    <string name="dispute_form">Dispute Form</string>
    <string name="dispute_form_details">Please explain your dispute case in details. Please include the reason for the dispute, as well as other necessary details.</string>
    <string name="select_industry">Select Industry</string>
    <string name="done">Done</string>
    <string name="business_structure">Business Structure</string>
    <string name="speciality_title">Speciality Title</string>
    <string name="note_kindly_be_advised">Note: Kindly be advised that you need registered sales tax numbers to operate on this platform.</string>
    <string name="market_place_jobs">Marketplace &amp; Jobs</string>
    <string name="search_specialists">Search Specialists</string>
    <string name="search_jobs">Search Jobs</string>
    <string name="business_number">Business Number</string>
    <string name="add_bank_account">Add Bank Account</string>
    <string name="view_customer_reviews">View Customer Reviews</string>
    <string name="notification">Notification</string>
    <string name="subscribe_to_industry">Subscribe to jobs based on industry</string>
    <string name="subscribe_to_area">Subscribe to jobs based on areas</string>
    <string name="about_us">About Us</string>
    <string name="about_jobs">About Jobs</string>
    <string name="title_of_specialist">Title of Specialist</string>
    <string name="filter_jobs">Filter Jobs</string>
    <string name="quote">Quote</string>
    <string name="your_value">Your value($)</string>
    <string name="quote_value_or_hourly_rate">Quote value or Hourly rate</string>
    <string name="availability_starting_date">Availability starting date</string>
    <string name="availability_scheduling_time_date">Available scheduling time &amp; date</string>
    <string name="estimated_time">Estimated Time (days)</string>
    <string name="describe_your_proposal">Describe your proposal</string>
    <string name="apply">Apply</string>
    <string name="note_quote">Please make sure you include any federal or provincial sales tax in the quote provided.</string>
    <string name="submit_quote">Submit Quote</string>
    <string name="update_quote">Update Quote</string>
    <string name="update">Update</string>
    <string name="institution_number">Institution Number</string>
    <string name="bank_account_number">Bank Account Number</string>
    <string name="transit_number">Transit Number</string>
    <string name="forgot_your_password">Forgot your password?</string>
</resources>