<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBlue"
    tools:context=".view.activity.login.LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:focusable="true"
        android:focusableInTouchMode="true"/>

    <LinearLayout
        android:id="@+id/ll_toolbar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/default_toolbar_height">

        <ImageButton
            android:id="@+id/btn_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:background="@drawable/ripple_bg_borderless_oval"
            app:srcCompat="@drawable/ic_back"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ll_toolbar"
        android:layout_gravity="center"
        android:orientation="vertical"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin">


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/jobs_pro"
            android:textSize="@dimen/text_super_high2"
            android:textStyle="bold"
            android:textColor="@color/colorWhite"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="7dp"
            android:layout_gravity="center_horizontal"
            android:textSize="@dimen/text_medium"
            android:textColor="@color/colorWhite"
            android:text="@string/connecting_you_with"/>
    </LinearLayout>


    <LinearLayout
        android:id="@+id/ll_text_views"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_vertical_margin_high"
        android:layout_below="@+id/ll_title"
        android:orientation="vertical"
        android:paddingLeft="32dp"
        android:paddingRight="32dp">

        <com.toolsbox.contractor.view.customUI.IconEditText
            android:id="@+id/et_email"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:hint="@string/email_or_phone"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            android:drawablePadding="8dp"
            android:drawableLeft="@drawable/tf_user_w"
            android:textCursorDrawable="@color/colorWhite"
            app:compoundDrawableHeight="20dp"
            app:compoundDrawableWidth="20dp"
            android:background="@drawable/corner_field"
            android:imeOptions="actionNext"
            android:maxLines="1"
            android:singleLine="true"
            android:textColorHint="@color/colorWhite"
            android:textSize="@dimen/text_title"
            android:textColor="@color/colorWhite"/>


        <com.toolsbox.contractor.view.customUI.IconEditText
            android:id="@+id/et_password"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="16dp"
            android:hint="@string/password"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            android:drawablePadding="8dp"
            android:drawableLeft="@drawable/tf_password_w"
            app:compoundDrawableHeight="20dp"
            app:compoundDrawableWidth="20dp"
            android:textCursorDrawable="@color/colorWhite"
            android:background="@drawable/corner_field"
            android:imeOptions="actionDone"
            android:maxLines="1"
            android:singleLine="true"
            android:inputType="textPassword"
            android:textColorHint="@color/colorWhite"
            android:textSize="@dimen/text_title"
            android:textColor="@color/colorWhite"/>

    </LinearLayout>

    <Button
        android:id="@+id/btn_forgot_password"
        android:layout_width="wrap_content"
        android:layout_height="20dp"
        android:layout_below="@+id/ll_text_views"
        android:text="@string/forgot_your_password"
        android:textSize="@dimen/text_normal"
        android:layout_centerHorizontal="true"
        android:textColor="@color/colorWhite"
        android:layout_marginTop="24dp"
        android:background="?android:attr/selectableItemBackground"
        android:textAllCaps="false"/>


    <androidx.cardview.widget.CardView
        android:id="@+id/cv_login"
        android:layout_width="match_parent"
        android:layout_height="@dimen/button_height_normal"
        android:layout_below="@+id/btn_forgot_password"
        android:clickable="true"
        android:layout_marginTop="24dp"
        android:layout_marginLeft="@dimen/activity_vertical_margin_normal"
        android:layout_marginRight="@dimen/activity_vertical_margin_normal"
        android:foreground="?android:attr/selectableItemBackground"
        card_view:cardBackgroundColor="@android:color/transparent"
        card_view:cardElevation="0dp"
        app:cardCornerRadius="25dp"
        android:focusable="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/corner_button"
            android:gravity="center_horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@android:color/transparent"
                android:paddingRight="3dp"
                android:text="@string/login"
                android:textColor="@color/colorWhite"
                android:textSize="@dimen/button_font_normal" />
        </LinearLayout>

    </androidx.cardview.widget.CardView>




    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:gravity="center"
        android:textSize="@dimen/text_small"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:text="@string/copyright_jobs"
        android:textColor="@color/colorWhite"/>


</RelativeLayout>