<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".view.activity.main.profile.AddBankActivity">

    <include layout="@layout/toolbar_default" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:layout_marginLeft="32dp"
        android:layout_marginRight="32dp">
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="50dp">

            <EditText
                android:id="@+id/et_institution"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/institution_number"
                android:imeOptions="actionNext"
                android:inputType="number"
                android:maxLines="1"
                android:singleLine="true"
                android:textColorHint="@color/colorLightGray"
                android:textSize="16dp" />

        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:layout_marginLeft="32dp"
        android:layout_marginRight="32dp">
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="50dp">

            <EditText
                android:id="@+id/et_bank_number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/bank_account_number"
                android:imeOptions="actionNext"
                android:inputType="number"
                android:maxLines="1"
                android:singleLine="true"
                android:textColorHint="@color/colorLightGray"
                android:textSize="16dp" />

        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:layout_marginLeft="32dp"
        android:layout_marginRight="32dp">
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="50dp">

            <EditText
                android:id="@+id/et_transit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/transit_number"
                android:imeOptions="actionNext"
                android:inputType="number"
                android:maxLines="1"
                android:singleLine="true"
                android:textColorHint="@color/colorLightGray"
                android:textSize="16dp" />

        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>

    <Button
        android:id="@+id/btn_submit"
        android:layout_width="match_parent"
        android:layout_height="@dimen/button_height_normal"
        android:textColor="@color/colorWhite"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="32dp"
        android:layout_marginRight="32dp"
        android:textAllCaps="false"
        android:background="@drawable/bg_rounded_25"
        android:text="@string/submit"
        android:textSize="@dimen/text_title"/>

</LinearLayout>